--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.0.0",
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~4.6.0",
