--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "start:json-server": "json-server --watch src/app/db/db.json --port 3001",
     "test": "ng test"
   },
   "private": true,
+  "type": "module",
   "dependencies": {
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.2.12",
@@ -18,6 +20,14 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/node": "^22.13.4",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
+    "openai": "^4.85.1",
+    "requests": "^0.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,6 +40,7 @@
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~4.6.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -37,6 +48,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
     "typescript": "~5.0.2"
   }
 }
